<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#E8E8D9"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="#051646"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/barriecito"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:fontFamily="@font/barriecito"
                android:textColor="#051646"
                android:textSize="17dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hint_email"
                android:fontFamily="@font/comic_relief"
                android:paddingHorizontal="16dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#E2DEF1"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="#051646"
                android:textSize="17dp"
                android:fontFamily="@font/barriecito"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hint_password"
                android:fontFamily="@font/comic_relief"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:drawableTint="#808080"
                android:drawablePadding="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#E2DEF1"
                tools:ignore="Autofill" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#E2DEF1"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="#051646"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/barriecito"
        android:elevation="8dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fingerprint_login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#E2DEF1"
        android:text="@string/fingerprint_button"
        android:textAllCaps="false"
        android:textColor="#051646"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/barriecito"
        android:elevation="8dp"/>
</LinearLayout>