<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E8DD"
    tools:context=".LanguageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BEC6FB"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#051646" />

        <TextView
            android:id="@+id/languageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barriecito"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/label_language"
            android:textColor="#051646"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settingsIconContainer"
            app:layout_constraintStart_toEndOf="@id/backIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/settingsIconContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/profile_icon_foreground" />

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/settings_icon_foreground" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/languageOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardEnglish"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="#BCB3DF"
            app:cardCornerRadius="18dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnglish"
                    style="@style/AppButton"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lang_english"
                    android:fontFamily="@font/comic_relief"
                    android:layout_gravity="center"
                    android:textSize="23dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAfrikaans"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="#BCB3DF"
            app:cardCornerRadius="18dp"
            app:cardElevation="4dp">

            <Button
                android:id="@+id/btnAfrikaans"
                style="@style/AppButton"
                android:layout_marginTop="5dp"
                android:text="@string/lang_afrikaans"
                android:fontFamily="@font/comic_relief"
                android:layout_gravity="center"
                android:textSize="23dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardZulu"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="#BCB3DF"
            app:cardCornerRadius="18dp"
            app:cardElevation="4dp">

            <Button
                android:id="@+id/btnZulu"
                style="@style/AppButton"
                android:layout_marginTop="5dp"
                android:text="@string/lang_zulu"
                android:fontFamily="@font/comic_relief"
                android:layout_gravity="center"
                android:textSize="23dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>